@@ -11,7 +11,6 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.messaging.Message;
@@ -52,7 +51,7 @@ public class SQSListener {
                                                     snsMessage.getPayload()));
                                     return inboundLog;
                                 })
-                        .collect(Collectors.toList());
+                        .toList();
         inboundLogService.saveAllMessagesToDatabase(inBoundLogList);
     }
 }
